# chinacolor-py

./: .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.html  README.md  README.zh-CN.Rmd  README.zh-CN.html  README.zh-CN.md  pyproject.toml
R/: 11.theme_ctc_bronze.R  12.theme_ctc_dunhuang.R  13.theme_ctc_ink.R  14.theme_ctc_mineral.R  15.theme_ctc_paper.R  7.1 monochromatic.R  7.10 Intermediate.R  7.2 analogous.R  7.3 harmonic.R  7.4 triadic.R  7.5 complementary.R  7.6  Split_Complementary.R  7.7 compound_antipodal.R  7.8 compound_concyclic.R  7.9 diverging_palette.R  7.ctc_palette.R  8.scale_fill_color_ctc_c.R  9.scale_fill_color_ctc_d.R  sysdata.rda  utils.R
data/: chinacolor.rds  palette_list.rds
examples/: README.md  run_all.py
examples/01_list_colors/: README.md  example.py
examples/02_plot_color_grid/: README.md  example.py
examples/03_list_palettes/: README.md  example.py
examples/04_plot_palette/: README.md  example.py
examples/11_themes/: README.md  (+1 more)
man/: analogous_palette.Rd  antipodal_palette.Rd  complementary_palette.Rd  concyclic_palette.Rd  ctc_palette.Rd  diverging_palette.Rd  get_l_val.Rd  grapes-or-or-grapes.Rd  harmonic_palette.Rd  intermediate_palette.Rd  monochromatic_palette.Rd  ordered_color_set.Rd  scale_color_ctc_c.Rd  scale_colour_ctc_c.Rd  scale_colour_ctc_d.Rd  scale_fill_ctc_c.Rd  scale_fill_ctc_d.Rd  split_complementary_palette.Rd  theme_ctc_bronze.Rd  theme_ctc_dunhuang.Rd  theme_ctc_ink.Rd  theme_ctc_mineral.Rd  theme_ctc_paper.Rd  triadic_palette.Rd
tests/: test_auto.py  test_catalog.py  test_mpl.py  test_palettes.py
(+29 files in other folders)
